--- a/index.html
+++ b/index.html
@@ -76,10 +76,11 @@
         <div class="header-menu-movil">
             <button class="cerrar-menu"><i class="fas fa-times"></i></button>
             <ul>
-                <li><a href="#">Inicio</a></li>
-                <li><a href="#">Productos</a></li>
-                <li><a href="#">Nosotros</a></li>
-                <li><a href="#">Contacto</a></li>
+                <li><a href="./index.html">Inicio</a></li>
+                <li><a href="./Productos.html">Productos</a></li>
+                <li><a href="./Nosotros.html">Nosotros</a></li>
+                <li><a href="./Contacto.html">Contacto</a></li>
+                <li><a href="./cuenta.html">Iniciar sesión</a></li>
             </ul>
         </div>
 
